# jarvis

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CODEOWNERS  MODULE.bazel  README.md  buildbuddy.yaml  go.mod  go.sum  main.go  main_test.go
.github/workflows/: publish.yml
api/jarvis/discord/v1/: BUILD.bazel  worker.proto
cmd/ingestor/: BUILD.bazel  config.go  ingestor_test.go  main.go  run.go  server.go
cmd/jarvis/: BUILD.bazel  config.go  jarvis_test.go  main.go  process.go  run.go
cmd/worker/: BUILD.bazel  config.go  main.go  run.go  worker_test.go
docs/: dynamodb.md  grounding.md  web-search.md
internal/awsidentity/: BUILD.bazel  awsidentity.go  awsidentity_test.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/dynamostore/: BUILD.bazel  repository.go  repository_test.go
internal/ingestor/: BUILD.bazel  controller.go  controller_test.go  publisher.go  publisher_test.go  service.go
internal/version/: BUILD.bazel  version.go
internal/worker/: BUILD.bazel  server.go  server_test.go
pkg/discord/: BUILD.bazel  configuration.go  configuration_test.go  context.go  discord.go  discord_test.go  formatting.go  image.go  message.go  queue.go  queue_test.go  reaction.go  reaction_test.go  runtime_context.go  runtime_context_test.go  search.go  session.go
pkg/genai/: BUILD.bazel  accuracy.go  accuracy_test.go  google_ai_test.go  handler.go  handler_test.go  live_eval_test.go  manual_test_main_test.go  openrouter_conformance_test.go  orchestrator.go  orchestrator_test.go  search_eval_cases.jsonl
pkg/llm/: BUILD.bazel  errors.go  google_ai_conformance_test.go  google_ai_test.go  llm_test.go  manual_test_main_test.go  openai_compatible.go  openrouter_conformance_test.go  profiles.go  tools.go  types.go  vertex.go
pkg/websearch/: BUILD.bazel  websearch.go  websearch_test.go
tools/: workspace_status.sh
tools/container/go/: BUILD.bazel  defs.bzl
tools/modules/: BUILD.bazel  go.MODULE.bazel  images.MODULE.bazel  toolchain.MODULE.bazel
