load("@gazelle//:def.bzl", "gazelle")
load("@rules_buf//buf:defs.bzl", "buf_format")
load("@rules_multirun//:defs.bzl", "command", "multirun")
load("//tools/container/go:defs.bzl", "go_container_image")

MODULE_VERSION = module_version()

exports_files(["buf.yaml"])

buf_format(
    name = "buf_format",
)

gazelle(
    name = "gazelle",
)

command(
    name = "ingestor",
    arguments = [
        "--port=8080",
        "--worker-url=http://127.0.0.1:8081/v1/messages:process",
    ],
    command = "//cmd/ingestor:ingestor",
)

command(
    name = "worker",
    arguments = ["--port=8081"],
    command = "//cmd/worker:worker",
)

multirun(
    name = "jarvis",
    commands = [
        "ingestor",
        "worker",
    ],
    jobs = 0,  # Set to 0 to run in parallel, defaults to sequential
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

go_container_image(
    name = "ingestor_image",
    base = "@distroless_base_debian13_nonroot",
    binary = "//cmd/ingestor",
    platform = ":linux_amd64",
    registry = "index.docker.io",
    repository = "justinswe/jarvis-ingestor",
    tag = MODULE_VERSION,
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

go_container_image(
    name = "worker_image",
    base = "@distroless_base_debian13_nonroot",
    binary = "//cmd/worker",
    platform = ":linux_amd64",
    registry = "index.docker.io",
    repository = "justinswe/jarvis-worker",
    tag = MODULE_VERSION,
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

go_container_image(
    name = "image",
    additional_binaries = {
        "/app/ingestor": "//cmd/ingestor",
        "/app/worker": "//cmd/worker",
    },
    additional_tags = {
        "latest": "latest",
    },
    base = "@distroless_base_debian13_nonroot",
    binary = "//cmd/jarvis",
    platform = ":linux_amd64",
    registry = "index.docker.io",
    repository = "justinswe/jarvis",
    tag = MODULE_VERSION,
    visibility = ["//visibility:public"],
)
