module(
    name = "jarvis",
    version = "0.7.2",
)

bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_buf", version = "0.5.4")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_multirun", version = "0.14.0")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(version = "v1.71.0")
use_repo(buf, "rules_buf_toolchains")

include("//tools/modules:go.MODULE.bazel")
include("//tools/modules:images.MODULE.bazel")
include("//tools/modules:toolchain.MODULE.bazel")
