load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "worker",
    srcs = ["server.go"],
    importpath = "github.com/justinswe/jarvis/internal/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//api/jarvis/discord/v1:discord",
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_justinswe_std//app",
        "@com_github_justinswe_std//errors",
        "@org_golang_google_protobuf//proto",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "worker_test",
    srcs = ["server_test.go"],
    embed = [":worker"],
    deps = [
        "//api/jarvis/discord/v1:discord",
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_justinswe_std//errors",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//proto",
    ],
)
