load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "discord",
    srcs = [
        "configuration.go",
        "context.go",
        "formatting.go",
        "message.go",
        "reaction.go",
        "search.go",
        "session.go",
    ],
    importpath = "github.com/justinswe/jarvis/pkg/discord",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config",
        "//pkg/genai",
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_justinswe_std//app",
        "@com_github_justinswe_std//errors",
        "@org_golang_google_genai//:genai",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "discord_test",
    srcs = [
        "configuration_test.go",
        "discord_test.go",
        "reaction_test.go",
    ],
    embed = [":discord"],
    deps = [
        "//internal/config",
        "//pkg/genai",
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_justinswe_std//errors",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_genai//:genai",
    ],
)
